--- a/dshackle_conf/dshackle.yaml
+++ b/dshackle_conf/dshackle.yaml
@@ -12,7 +12,7 @@ monitoring:
   jvm: false
   extended: false
   prometheus:
-    enabled: true
+    enabled: false
     bind: 0.0.0.0
     port: 8081
     path: /metrics
