--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,11 @@ services:
       - certs:/etc/nginx/certs
       - vhosts:/etc/nginx/vhost.d
       - html:/usr/share/nginx/html
+    environment:
+      - VIRTUAL_HOST=${DOMAIN}
+      - VIRTUAL_PORT=8080
+      - LETSENCRYPT_HOST=${DOMAIN}
+      - LETSENCRYPT_EMAIL=${EMAIL}
     labels:
       - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
     networks:
@@ -54,18 +59,18 @@ services:
     networks:
       - back_net
 
-  metrics:
-    container_name: pusher
-    image: debian
-    build:
-      context: ./metrics
-      dockerfile: ./Dockerfile
-    env_file:
-      - ./metrics/.env
-    networks:
-      - back_net
-    depends_on:
-      - dshackle
+#  metrics:
+#    container_name: pusher
+#    image: debian
+#    build:
+#      context: ./metrics
+#      dockerfile: ./Dockerfile
+#    env_file:
+#      - ./metrics/.env
+#    networks:
+#      - back_net
+#    depends_on:
+#      - dshackle
 
 networks:
   proxy_net:
